<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".Registration.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:padding="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:weightSum="2">
                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#c68080"
                    android:drawableRight="@drawable/user"
                    android:hint="@string/Medical_tourrism_fullname_txt"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#ddae4b24"
                    android:textCursorDrawable="@drawable/cursoercolor"
                    />
                <EditText
                    android:id="@+id/secondname"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="#c68080"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/Secondname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="#fff"
                    android:textColorHint="#ddae4b24"
                    android:textCursorDrawable="@drawable/cursoercolor"
                    android:visibility="gone"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#c68080"
                android:hint="@string/SurName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textCursorDrawable="@drawable/cursoercolor"
                android:visibility="gone"
                />
            <EditText
                android:id="@+id/mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#c68080"
                android:drawableRight="@drawable/mobile"
                android:hint="@string/mobilenumber"
                android:maxLength="20"
                android:maxLines="1"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textCursorDrawable="@drawable/cursoercolor"
                />
            <EditText
                android:id="@+id/idnumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:hint="@string/id"
                android:maxLines="1"
                android:numeric="decimal"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textCursorDrawable="@drawable/cursoercolor"
                android:visibility="gone"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#c68080"
                android:drawableRight="@drawable/password"
                android:hint="@string/password"
                android:maxLines="1"
                android:password="true"
                android:singleLine="true"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textCursorDrawable="@drawable/cursoercolor"
                android:textDirection="rtl"
                />
            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:backgroundTint="#c68080"
                android:drawableRight="@drawable/password"
                android:hint="@string/confirmpasswrod"
                android:maxLines="1"
                android:textStyle="bold"
                android:password="true"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textCursorDrawable="@drawable/cursoercolor"
                android:textDirection="rtl"
                />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#c68080"
                android:drawableRight="@drawable/email"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/email"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textStyle="bold"
                android:textCursorDrawable="@drawable/cursoercolor"
                android:textDirection="rtl" />
            <TextView
                android:id="@+id/dateofbirth"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#c68080"
                android:drawableRight="@drawable/birthdate"
                android:gravity="center_vertical"
                android:hint="@string/DateOfBirth"
                android:maxLines="1"
                android:textColor="#fff"
                android:textColorHint="#ddae4b24"
                android:textStyle="bold"
                android:textDirection="rtl"
                />
            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:dividerPadding="30dp"
                android:layoutDirection="rtl"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male"
                    android:buttonTint="#000"
                    android:textColor="#ddae4b24"
                    android:textStyle="bold"/>
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000"
                    android:layout_marginRight="50dp"
                    android:text="@string/Female"
                    android:textColor="#ddae4b24"
                    android:textStyle="bold"/>
            </RadioGroup>
            <Button
                android:id="@+id/RegesrationBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_corner"
                android:text="@string/registration"
                android:textColor="#ddae4b24"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>