<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32A5B4"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user2"
            />

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            >

            <EditText
                android:id="@+id/edit_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:hint="@string/Medical_tourrism_fullname_txt"
                android:textColorHint="#000"
                android:maxLines="1"
                android:drawableRight="@drawable/user"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_weight="1"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursoercolor"
                />
            <EditText
                android:id="@+id/edit_secondname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/Secondname"
                android:focusable="true"
                android:drawableRight="@drawable/user"
                android:drawableTint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:maxLines="1"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursoercolor"
                android:focusableInTouchMode="true"
                android:visibility="gone"
                />
        </LinearLayout>
        <EditText
            android:id="@+id/edit_surname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/SurName"
            android:maxLines="1"
            android:drawableTint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"
            android:drawableRight="@drawable/user"
            android:textCursorDrawable="@drawable/cursoercolor"
            android:visibility="gone"
            />
        <EditText
            android:id="@+id/edit_mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:hint="@string/mobilenumber"
            android:maxLines="1"
            android:gravity="right"
            android:maxLength="11"
            android:drawableRight="@drawable/mobile"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColorHint="#000"
            android:textCursorDrawable="@drawable/cursoercolor"
            android:background="@android:drawable/editbox_background_normal"
            />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:drawableRight="@drawable/pass"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:password="true"
            android:maxLines="1"
            android:visibility="gone"
            android:textDirection="rtl"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursoercolor"
            android:drawableTint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            />
        <EditText
            android:id="@+id/edit_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:hint="@string/confirmpasswrod"
            android:drawableRight="@drawable/pass"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:password="true"
            android:maxLines="1"
            android:visibility="gone"
            android:textDirection="rtl"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursoercolor"
            android:drawableTint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            />
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:hint="@string/email"
            android:drawableRight="@drawable/email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:maxLines="1"
            android:textColorHint="#000"
            android:textDirection="rtl"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursoercolor"
            android:background="@android:drawable/editbox_background_normal"
            />
        <Button
            android:id="@+id/edit_RegesrationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom|center"
            android:background="@drawable/button_round_corner"
            android:textColor="#fff"
            android:text="حفــظ التعديـــل"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:textSize="20sp"
            />

</LinearLayout>