<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#32A5B4"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".Login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="50dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/doc2"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/otheraccountLy"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_height="0dp"
        android:layout_weight="2">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:hint="@string/user_name_hint"
                android:textColorHint="#000"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:drawableRight="@drawable/email"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginRight="10dp"
                android:background="@drawable/background_row3"
                android:maxLines="1"
                android:textColor="#000"
                android:textDirection="rtl"
                />

        <EditText
            android:id="@+id/paasword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/password"
            android:textColorHint="#000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:background="@drawable/background_row3"
            android:phoneNumber="true"
            android:padding="10dp"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#000"
            android:textDirection="rtl"
            android:layout_marginBottom="10dp"
            />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LogBtn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/button_round_bookingg"
        android:textColor="#0D6472"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:text="@string/login" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</LinearLayout>